# bio-web-stats

./: .coveragerc  .env.development  .env.example  .env.production  .gitignore  000-default.conf  Dockerfile  Pipfile  README.md  alembic.ini  app.py  app.wsgi  autoapp.py  coverage.lcov  docker-compose.yml  flaskapp.py  format_helpers.py  global_package_history.R  package-lock.json  package.json  playwright.config.ts  pyproject.toml  pytest.ini  requirements.txt  run.py  setup.cfg  setup.py  test-instance-config.py  webpack.config.js
alembic/: env.py
alembic/versions/: f4991b81f360_initial_migration.py
app/: __init__.py  app.py  app_helpers.py  db.py  dbquery.py  dbquery_structures.py  format_helpers.py  render_page.py  run.py
app/templates/: bioc.html  category.html  data-annotation.html  data-experiment.html  stats-bioc.html  workflows.html
assets/js/: main.js
bioc_webstats/: __init__.py  app.py  app_waitress.py  aws_functions.py  commands.py  configmodule.py  database.py  extensions.py  flask_ingest.sh  flask_ingest_crontab_setup.sh  ingest.py  ingest_logs.py  models.py  packages_table_update.py  post_install.py  settings.py  splash.py  stats.py  stats_plot.py  temp.py
bioc_webstats/installer_scripts/: flask_environment  installer.sh
bioc_webstats/static/: barchart.js  cache_manifest.json
bioc_webstats/templates/: 401.html  404.html  category.html  footer.html  home.html  layout.html  main.css  nav.html  stats-bioc.html  tmp.py
conversion/: README.md  access_logs_to_stats_tsv.py  bioc_versions.html  global_package_history.R  global_package_history.py  isql_row_counts.sh  manifest_to_packages_table.csv  psql_connection.py
db/: db.py  summary_schema.sql
docker/: Dockerfile  build_docker.sh  run_docker.sh
docs/: old_specimen.txt  stats_replacement_design_brief.md  test-instance-setup.md  webstats-system-overview.md
e2e/: .env  constants.ts  smoke_test.spec.ts  software_page.spec.ts  workflow_page.spec.ts
etl/: access_logs_to_stats_tsv.py  bioc-www-logreader-prod.json  bioc_web_downloads.sql  change-table-location.json  cli_specimens.sh  glue-schema.json  glue_weblog_table.json  glue_weblog_table_in.json  i_download_summary.sql  i_populate_category_stats.sql  i_populate_download_summary.sql  i_populate_web_downloads.sql  investigate_logs.py  legacy-access_log-to-web_downloads.sql  legacy-table-def.sql  log_partition_projector.py  parquet_to_sql.py  retrieve_package_info.py  s3_move_objects.sh  t_bio _webstats_info.sql  t_bioc_web_downloads.sql  t_bioc_web_downloads_psql.sql  t_bioc_web_logs.sql  t_bioc_web_logs_partitioned.sql  t_cloudfront_logs.sql  t_download_summary.sql  t_stats_postgres.sql  t_stats_tsv.sql  v_bioc_web_downloads.sql
etl/postgresql/: f_stats.sql  sp_update_stats.sql  stats_idx_category.sql  t_bioc_web_downloads_psql.sql  t_categorystats_postgres.sql  t_packages_postgres.sql  t_stats_postgres.sql  t_webstats_info_psql.sql  u_webstats_info_psql.sql  update_stats.sql  v_categorystats_postgres.sql  v_stats_psqlsql.sql
installer_scripts/: Dockerfile  apache2.service  build_docker.sh  create_ec2_instance.sh  docker_dev_setup_example.md  entrypoint.sh  installer.sh  run_docker.sh
migrations/versions/: 28f23ef4e339_.py  9c266b1a4aa9_.py
requirements/: dev.txt  prod.txt
shell_scripts/: aws_installer.sh  create_ec2_instance.sh  installer.sh
supervisord_programs/: bioc-webstats.service  flask_environment  gunicorn.conf  start_gunicorn.sh
test-deployment/: deploy.yml  main.tf  terraform.tfstate.backup
test-deployment/ansible/: ansible.cfg  install-packages.yml  inventory.ini
test-deployment/terra-production/: main.tf  variables.tf
tests/: .env  conftest.py  create_test_database.py  factories.py  settings.py  test_database.py  test_dbquery.py  test_models.py  test_pages.py  test_pages2.py  test_routes.py
tests/dbs/: twodaytest.db
tests/parquet/: 20231018_135256_00106_vswg5_2c440c7e-7efe-4de2-a4b8-8f6e89afaad9  20231018_135256_00106_vswg5_76c51145-f204-4ffa-8ea1-c64648208cc5  20231018_135256_00106_vswg5_8d38d835-b020-455d-af44-594729f25bcd  20231018_135256_00106_vswg5_b458757a-5412-4291-a5af-70c85a141f8c
