[build-system]
requires = ["flit_core >= 3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "bioc_webstats"
version = "0.1.3"
description = "A web application to serve the content under www.bioconductor.org/packages/stats/"
authors = [{name = "Robert Shear", email = "rshear@ds.dfck.harvard.edu"}]
requires-python = ">=3.9"
classifiers = [
    "Framework :: Flask",
    "Programming Language :: Python :: 3",
]

dependencies = [
    # Flask
    "click>=7.0",
    "Flask==2.3.3",
    "Werkzeug",
    "python-dotenv",

    # Database
    "Flask-SQLAlchemy==3.1.1",
    "psycopg2-binary==2.9.9",
    "SQLAlchemy==2.0.22",

    # aurora to SQL
    "pandas",
    "pyarrow",
    "s3fs",
    "awswrangler",

    # Migrations
    "Flask-Migrate==4.0.5",

    # Forms
    "email-validator==2.0.0.post2",
    "Flask-WTF==1.2.1",
    "WTForms==3.1.0",

    # Deployment
    "gevent==23.9.1",
    "gunicorn>=19.9.0",
    "supervisor==4.2.5",

    # Flask Static Digest
    "Flask-Static-Digest==0.4.0",

    # Caching`
    "Flask-Caching>=2.0.2",

    # Debug toolbar
    "Flask-DebugToolbar==0.13.1",

    # Environment variable parsing
    "environs",

    # App 
    "boto3"]

[project.optional-dependencies]
dev = [

# Testing
    "factory-boy==3.3.0",
    "pytest==7.4.2",
    "pytest-cov==4.1.0",
    "WebTest==3.0.0",
    "decouple",

# Lint and code style
    "flake8",
    "isort",
    "pep8-naming",
    "pytest-playwright",

# Local db manipulation
    "fastparquet"]


[tool.coverage.run]
branch = true
source = ["bioc_webstats"]

[tool.flake8]
max-line-length=120
exclude = ["migrations/*", "etl/*"]
max-complexity = 18

[tool.isort]
profile = "black"
skip_glob = ["migrations/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
