[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bioc_webstats"
version = "0.1.8"
description = "A web application to serve the content under www.bioconductor.org/packages/stats/"
authors = ["Robert Shear <rshear@ds.dfck.harvard.edu>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bioconductor/bio-web-stats"
classifiers = [
    "Framework :: Flask",
    "Programming Language :: Python :: 3",
]

include = [
    "pyproject.toml",
    "bioc_webstats/installer_scripts/*",
]

[tool.poetry.dependencies]
python = "^3.12.3"
click = ">=7.0"
Flask = ">=2.3,<3.0"
Werkzeug = "*"
python-dotenv = "*"
Flask-SQLAlchemy = ">=3.1,<4.0"
psycopg2-binary = ">=2.9,<3.0"
SQLAlchemy = ">=2.0,<3.0"
pandas = "*"
pyarrow = "*"
s3fs = "*"
awswrangler = "*"
Flask-Migrate = ">=4.0,<5.0"
email-validator = ">=2.0,<3.0"
Flask-WTF = ">=1.2,<2.0"
WTForms = ">=3.1,<4.0"
gevent = "*"
supervisor = ">=4.2,<5.0"
Flask-Static-Digest = ">=0.4,<1.0"
Flask-Caching = ">=2.0,<3.0"
Flask-DebugToolbar = ">=0.13,<1.0"
environs = "*"
boto3 = "*"
ptvsd = "*"
waitress = "*"

[tool.poetry.group.dev.dependencies]
factory-boy = ">=3.3,<4.0"
pytest = ">=7.4,<8.0"
pytest-cov = ">=4.1,<5.0"
WebTest = ">=3.0,<4.0"
decouple = "*"
flake8 = "*"
isort = "*"
pep8-naming = "*"
pytest-playwright = "*"
fastparquet = "*"

[tool.coverage.run]
branch = true
source = ["bioc_webstats"]

[tool.flake8]
max-line-length = 120
exclude = ["migrations/*", "etl/*"]
max-complexity = 18

[tool.isort]
profile = "black"
skip_glob = ["migrations/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
